@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
+  Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
@@ -70,7 +70,7 @@ public class MultiHostMySQLConnection implements MySQLConnection {
         return this.thisAsProxy;
     }
 
-    protected MySQLConnection getActiveMySQLConnection() {
+    public MySQLConnection getActiveMySQLConnection() {
         synchronized (this.thisAsProxy) {
             return this.thisAsProxy.currentConnection;
         }
