@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2010, 2016, Oracle and/or its affiliates. All rights reserved.
+  Copyright (c) 2010, 2017, Oracle and/or its affiliates. All rights reserved.
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
@@ -206,6 +206,8 @@ public interface MySQLConnection extends Connection, ConnectionProperties {
     MySQLConnection getLoadBalanceSafeProxy();
 
     MySQLConnection getMultiHostSafeProxy();
+
+    MySQLConnection getActiveMySQLConnection();
 
     ProfilerEventHandler getProfilerEventHandlerInstance();
 
