@@ -24,6 +24,8 @@
 package com.mysql.jdbc;
 
 import java.io.InputStream;
+import java.lang.ref.Reference;
+import java.lang.ref.WeakReference;
 import java.math.BigInteger;
 import java.sql.BatchUpdateException;
 import java.sql.DriverManager;
@@ -67,15 +69,13 @@ public class StatementImpl implements Statement {
      * and simple way to implement a feature that isn't used all that often.
      */
     class CancelTask extends TimerTask {
-
-        long connectionId = 0;
         SQLException caughtWhileCancelling = null;
         StatementImpl toCancel;
         Properties origConnProps = null;
         String origConnURL = "";
+        long origConnId = 0;
 
         CancelTask(StatementImpl cancellee) throws SQLException {
-            this.connectionId = cancellee.connectionId;
             this.toCancel = cancellee;
             this.origConnProps = new Properties();
 
@@ -89,6 +89,7 @@ public class StatementImpl implements Statement {
             }
 
             this.origConnURL = StatementImpl.this.connection.getURL();
+            this.origConnId = StatementImpl.this.connection.getId();
         }
 
         @Override
@@ -103,38 +104,40 @@ public class StatementImpl implements Statement {
                     java.sql.Statement cancelStmt = null;
 
                     try {
-                        if (StatementImpl.this.connection.getQueryTimeoutKillsConnection()) {
-                            CancelTask.this.toCancel.wasCancelled = true;
-                            CancelTask.this.toCancel.wasCancelledByTimeout = true;
-                            StatementImpl.this.connection.realClose(false, false, true,
-                                    new MySQLStatementCancelledException(Messages.getString("Statement.ConnectionKilledDueToTimeout")));
-                        } else {
-                            synchronized (StatementImpl.this.cancelTimeoutMutex) {
-                                if (CancelTask.this.origConnURL.equals(StatementImpl.this.connection.getURL())) {
-                                    //All's fine
-                                    cancelConn = StatementImpl.this.connection.duplicate();
-                                    cancelStmt = cancelConn.createStatement();
-                                    cancelStmt.execute("KILL QUERY " + CancelTask.this.connectionId);
-                                } else {
-                                    try {
-                                        cancelConn = (Connection) DriverManager.getConnection(CancelTask.this.origConnURL, CancelTask.this.origConnProps);
-                                        cancelStmt = cancelConn.createStatement();
-                                        cancelStmt.execute("KILL QUERY " + CancelTask.this.connectionId);
-                                    } catch (NullPointerException npe) {
-                                        //Log this? "Failed to connect to " + origConnURL + " and KILL query"
-                                    }
-                                }
+                        MySQLConnection physicalConn = StatementImpl.this.physicalConnection.get();
+                        if (physicalConn != null) {
+                            if (physicalConn.getQueryTimeoutKillsConnection()) {
                                 CancelTask.this.toCancel.wasCancelled = true;
                                 CancelTask.this.toCancel.wasCancelledByTimeout = true;
+                                physicalConn.realClose(false, false, true,
+                                        new MySQLStatementCancelledException(Messages.getString("Statement.ConnectionKilledDueToTimeout")));
+                            } else {
+                                synchronized (StatementImpl.this.cancelTimeoutMutex) {
+                                    if (CancelTask.this.origConnURL.equals(physicalConn.getURL())) {
+                                        // All's fine
+                                        cancelConn = physicalConn.duplicate();
+                                        cancelStmt = cancelConn.createStatement();
+                                        cancelStmt.execute("KILL QUERY " + physicalConn.getId());
+                                    } else {
+                                        try {
+                                            cancelConn = (Connection) DriverManager.getConnection(CancelTask.this.origConnURL, CancelTask.this.origConnProps);
+                                            cancelStmt = cancelConn.createStatement();
+                                            cancelStmt.execute("KILL QUERY " + CancelTask.this.origConnId);
+                                        } catch (NullPointerException npe) {
+                                            // Log this? "Failed to connect to " + origConnURL + " and KILL query"
+                                        }
+                                    }
+                                    CancelTask.this.toCancel.wasCancelled = true;
+                                    CancelTask.this.toCancel.wasCancelledByTimeout = true;
+                                }
                             }
                         }
                     } catch (SQLException sqlEx) {
                         CancelTask.this.caughtWhileCancelling = sqlEx;
                     } catch (NullPointerException npe) {
-                        // Case when connection closed while starting to cancel
-                        // We can't easily synchronize this, because then one thread can't cancel() a running query
-
-                        // ignore, we shouldn't re-throw this, because the connection's already closed, so the statement has been timed out.
+                        // Case when connection closed while starting to cancel.
+                        // We can't easily synchronize this, because then one thread can't cancel() a running query.
+                        // Ignore, we shouldn't re-throw this, because the connection's already closed, so the statement has been timed out.
                     } finally {
                         if (cancelStmt != null) {
                             try {
@@ -193,6 +196,9 @@ public class StatementImpl implements Statement {
 
     /** The connection that created us */
     protected volatile MySQLConnection connection = null;
+
+    /** The physical connection used to effectively execute the statement */
+    protected Reference<MySQLConnection> physicalConnection = null;
 
     protected long connectionId = 0;
 
@@ -300,7 +306,7 @@ public class StatementImpl implements Statement {
      * Constructor for a Statement.
      * 
      * @param c
-     *            the Connection instantation that creates us
+     *            the Connection instance that creates us
      * @param catalog
      *            the database name in use when we were created
      * 
@@ -905,6 +911,12 @@ public class StatementImpl implements Statement {
     protected void statementBegins() {
         this.clearWarningsCalled = false;
         this.statementExecuting.set(true);
+
+        MySQLConnection physicalConn = this.connection.getMultiHostSafeProxy().getActiveMySQLConnection();
+        while (!(physicalConn instanceof ConnectionImpl)) {
+            physicalConn = physicalConn.getMultiHostSafeProxy().getActiveMySQLConnection();
+        }
+        this.physicalConnection = new WeakReference<MySQLConnection>(physicalConn);
     }
 
     protected void resetCancelledState() throws SQLException {
